Fix for #1853 gcc 4.7 compiler warning in infrastructure code

--- a/openhpi/trunk/utils/Makefile.am
+++ b/openhpi/trunk/utils/Makefile.am
@@ -88,6 +88,8 @@ libopenhpiutils_la_SOURCES = \
     sahpi_time_utils.h \
     sahpi_gcrypt_utils.c \
     sahpi_gcrypt_utils.h \
+    sahpi_wrappers.c \
+    sahpi_wrappers.h \
     uid_utils.c \
     uid_utils.h
 
