Fix for #1807 use standard docdir

--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -117,8 +117,7 @@ include_HEADERS = $(top_srcdir)/include/SaHpi.h \
                   $(top_srcdir)/utils/event_utils.h \
                   $(top_srcdir)/clients/oh_clients.h
 
-docsdir=$(datadir)/doc/$(PACKAGE_NAME)-$(VERSION)
-docs_DATA = README README.daemon COPYING ChangeLog
+doc_DATA = README README.daemon COPYING ChangeLog
 
 $(top_srcdir)/utils/sahpi_enum_utils.h:
 	make -C $(top_builddir)/utils sahpi_enum_utils.h
