Fix for #1611 ilo2_ribcl plug-in need to support the get_hotswap_state ABI

--- a/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
+++ b/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
@@ -62,7 +62,9 @@ libilo2_ribcl_la_SOURCES  =	\
 				ilo2_ribcl_ssl.h \
 				ilo2_ribcl_xml.c \
 				ilo2_ribcl_xml.h \
-				ilo2_ribcl_cmnds.h
+				ilo2_ribcl_cmnds.h \
+				ilo2_ribcl_hotswap.c \
+				ilo2_ribcl_hotswap.h
 
 libilo2_ribcl_la_LIBADD   = @SSL_LIB@ @XML2_LIB@ $(top_builddir)/utils/libopenhpiutils.la
 libilo2_ribcl_la_LDFLAGS  = -module -version-info @HPI_LIB_VERSION@
