Fix for #1886 Warnings from new automake

--- a/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
+++ b/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
@@ -37,7 +37,7 @@ MAINTAINERCLEANFILES 	= Makefile.in
 
 AM_CPPFLAGS = -DG_LOG_DOMAIN=\"ilo2_ribcl\"
 
-INCLUDES		= @OPENHPI_INCLUDES@ @XML2_INCLUDE@ @OH_SSL_INCLUDES@
+AM_CPPFLAGS		+= @OPENHPI_INCLUDES@ @XML2_INCLUDE@ @OH_SSL_INCLUDES@
 
 pkglib_LTLIBRARIES	= libilo2_ribcl.la
 
