--- a/openhpi/trunk/utils/Makefile.am
+++ b/openhpi/trunk/utils/Makefile.am
@@ -55,7 +55,7 @@ MOSTLYCLEANFILES = @TEST_CLEAN@
 # FIXME:: Add when we can auto-generate files for SMP systems
 # MOSTLYCLEANFILES += $(GENERATED_FILES)
 
-INCLUDES = @OPENHPI_INCLUDES@
+AM_CPPFLAGS += @OPENHPI_INCLUDES@
 
 SUBDIRS = t
 DIST_SUBDIRS = t
