--- a/openhpi/trunk/utils/t/ann/Makefile.am
+++ b/openhpi/trunk/utils/t/ann/Makefile.am
@@ -27,7 +27,7 @@ MOSTLYCLEANFILES     = $(shell ls *data) $(REMOTE_SOURCES) @TEST_CLEAN@
 
 AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
 
-INCLUDES             = @OPENHPI_INCLUDES@
+AM_CPPFLAGS             += @OPENHPI_INCLUDES@
 
 $(REMOTE_SOURCES):
 	if test ! -f $@ -a ! -L $@; then \
