--- a/openhpi/trunk/utils/t/el/Makefile.am
+++ b/openhpi/trunk/utils/t/el/Makefile.am
@@ -30,7 +30,7 @@ CLEANFILES           = $(top_builddir)/src/t/el/elTest.data
 
 AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
 
-INCLUDES             = @OPENHPI_INCLUDES@
+AM_CPPFLAGS             += @OPENHPI_INCLUDES@
 
 $(REMOTE_SOURCES):
 	if test ! -f $@ -a ! -L $@; then \
