--- a/openhpi/trunk/utils/t/rpt/Makefile.am
+++ b/openhpi/trunk/utils/t/rpt/Makefile.am
@@ -25,7 +25,7 @@ MOSTLYCLEANFILES 	= $(REMOTE_SOURCES) @TEST_CLEAN@
 
 AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
 
-INCLUDES		= @OPENHPI_INCLUDES@
+AM_CPPFLAGS		+= @OPENHPI_INCLUDES@
 
 EXTRA_DIST              = rpt_resources.h
 
