--- a/openhpi/trunk/utils/t/uid/Makefile.am
+++ b/openhpi/trunk/utils/t/uid/Makefile.am
@@ -26,7 +26,7 @@ MOSTLYCLEANFILES 	= @TEST_CLEAN@ \
 
 AM_CPPFLAGS = -DG_LOG_DOMAIN=\"t\"
 
-INCLUDES		= @OPENHPI_INCLUDES@
+AM_CPPFLAGS		+= @OPENHPI_INCLUDES@
 
 $(REMOTE_SOURCES):
 	if test ! -f $@ -a ! -L $@; then \
