--- a/openhpi/trunk/utils/t/epath/Makefile.am
+++ b/openhpi/trunk/utils/t/epath/Makefile.am
@@ -40,6 +40,7 @@ REMOTE_SOURCES = \
 		sahpi_event_utils.c \
 		sahpi_struct_utils.c \
 		sahpi_time_utils.c \
+		sahpi_wrappers.c \
 		uid_utils.c
 
 MOSTLYCLEANFILES = $(REMOTE_SOURCES) @TEST_CLEAN@
