--- a/openhpi/trunk/utils/t/uid/Makefile.am
+++ b/openhpi/trunk/utils/t/uid/Makefile.am
@@ -18,6 +18,7 @@ REMOTE_SOURCES		= uid_utils.c \
 			  sahpi_event_encode.c \
 			  sahpi_event_utils.c \
 			  sahpi_struct_utils.c \
+			  sahpi_wrappers.c \
 			  sahpi_time_utils.c
 
 MOSTLYCLEANFILES 	= @TEST_CLEAN@ \
